--- a/sass/_search-page.scss
+++ b/sass/_search-page.scss
@@ -21,6 +21,10 @@
   display: inline-block;
   width: 92px;
   height: 48px;
+  @media (max-width: 768px) {
+    height: 40px;
+    width: 82px;
+  }
 }
 
 .switch input {
@@ -51,6 +55,10 @@
   background-color: #fff;
   transition: 0.4s;
   border-radius: 50%;
+  @media (max-width: 768px) {
+    height: 33px;
+    width: 33px;
+  }
 }
 
 input:checked + .slider {
