--- a/sass/bisuness.dashboard.scss
+++ b/sass/bisuness.dashboard.scss
@@ -37,4 +37,4 @@ $grid-breakpoints: map-merge($grid-breakpoints, $custom-grid-breakpoints);
 
 @import "business/_reset-browser";
 @import "business/_dashboard-home";
-
+@import "business/business-setting";
