business setting page done

--- a/sass/_badges.scss
+++ b/sass/_badges.scss
@@ -30,6 +30,13 @@
   border: 1px solid #d3d7d3;
 }
 
+.alt-badge-light {
+  color: #000000;
+  background-color: #ecedf0 !important;
+  padding: 5px 15px !important;
+  font-size: 10px;
+}
+
 // dots
 .alt-dots {
   width: 10px;
@@ -65,5 +72,5 @@
   background-color: #423ba3;
 }
 .punk-rectangle {
-  background-color: #F96767;
+  background-color: #f96767;
 }
