--- a/sass/business/_business-events.scss
+++ b/sass/business/_business-events.scss
@@ -356,3 +356,165 @@
   font-size: 14px;
   font-weight: 600;
 }
+
+.event_tags {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-attachment: scroll;
+  h3 {
+    font-size: 14px;
+    font-weight: 500;
+    font-family: var(--bs-body-font-family);
+    color: #ffffff;
+  }
+  &.event_tags_bg_1 {
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 0) 100%
+      ),
+      url("../../assets/images/business-dashboard/events-page/event_tag_bg_1.jpg");
+  }
+  &.event_tags_bg_2 {
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 0) 100%
+      ),
+      url("../../assets/images/business-dashboard/events-page/event_tag_bg_2.jpg");
+  }
+  &.event_tags_bg_3 {
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 0) 100%
+      ),
+      url("../../assets/images/business-dashboard/events-page/event_tag_bg_3.jpg");
+  }
+  &.event_tags_bg_4 {
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 0) 100%
+      ),
+      url("../../assets/images/business-dashboard/events-page/event_tag_bg_4.jpg");
+  }
+  &.event_tags_bg_5 {
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 0) 100%
+      ),
+      url("../../assets/images/business-dashboard/events-page/event_tag_bg_5.jpg");
+  }
+  &.event_tags_bg_6 {
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 0) 100%
+      ),
+      url("../../assets/images/business-dashboard/events-page/event_tag_bg_6.jpg");
+  }
+}
+
+.single_event_card_wrapper {
+  font-family: var(--bs-body-font-family);
+  color: var(--alt-text-clr);
+  .card_image_thumb {
+    img {
+      border-top-left-radius: 12px;
+      border-top-right-radius: 12px;
+      width: 100%;
+      height: 218px;
+      object-fit: cover;
+    }
+  }
+  .card_avater {
+    img {
+    }
+    p {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 18.2px;
+      margin-bottom: 6px;
+    }
+    h4 {
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 20.8px;
+    }
+  }
+  .card_tags {
+    .card_location {
+      font-size: 14px;
+      font-weight: 500;
+      margin-right: 16px;
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        width: 1px;
+        height: 80%;
+        background-color: #cacaca;
+        border-radius: 0;
+        right: -11px;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
+    .online {
+      margin-right: 16px;
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        width: 1px;
+        height: 80%;
+        background-color: #cacaca;
+        border-radius: 0;
+        right: -11px;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
+    .registration {
+      font-size: 14px;
+    }
+    .registration_fee {
+      border: 1px solid #cacaca;
+      background-color: #ffffff;
+      font-size: 14px;
+      border-radius: 25px;
+      padding: 2px 8px;
+    }
+  }
+  .date_time {
+    font-size: 14px;
+  }
+  .card_footer {
+    .card_end_time {
+      font-size: 12px;
+      font-weight: 500;
+      background-color: #ecedf0;
+      border-radius: 25px;
+      padding: 5px 10px;
+    }
+    .card_register_now_btn {
+      border: 1px solid #cacaca;
+      background-color: #ffffff;
+      font-size: 14px;
+      border-radius: 25px;
+      padding: 5px 10px;
+    }
+    .card_bookmark {
+      border: 1px solid #cacaca;
+      background-color: #ffffff;
+      border-radius: 50%;
+      width: 32px;
+      height: 32px;
+      line-height: 30px;
+      font-size: 12px;
+    }
+  }
+}
