event details page done

--- a/sass/_badges.scss
+++ b/sass/_badges.scss
@@ -49,6 +49,9 @@
 .alt-dots-dark {
   background-color: #232529 !important;
 }
+.alt-dots-gray {
+  background-color: #ecedf0 !important;
+}
 .alt-dots-danger {
   background-color: #e01e5a !important;
 }
