--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -118,3 +118,13 @@
     color: var(--alt-black);
   }
 }
+
+// event page buttons
+
+.evetn-page-btn {
+  border: 1px solid #cacaca;
+  background-color: #fff;
+  font-size: 14px;
+  border-radius: 25px;
+  padding: 5px 10px;
+}
