--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -2,7 +2,7 @@
   background-color: #ffffff;
   color: var(--alt-gray-light-200);
   width: 100%;
-  padding: 1rem;
+  padding: 15px 1rem;
   border-radius: 0.375rem;
   border: solid 0.063rem var(--alt-gray-light);
   font-family: var(--bs-body-font-family);
