--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -128,3 +128,16 @@
   border-radius: 25px;
   padding: 5px 10px;
 }
+
+// event creation page
+.add_more_btn {
+  font-size: 14px;
+  color: var(--alt-text-light);
+  text-decoration: underline;
+  font-family: var(--bs-body-font-family);
+  border: none;
+  background-color: transparent;
+  &:hover {
+    color: var(--alt-primary);
+  }
+}
