--- a/sass/bisuness.dashboard.scss
+++ b/sass/bisuness.dashboard.scss
@@ -9,6 +9,7 @@ $custom-theme-colors: (
   alt-gray-bg-clr: #f4f4f4,
   alt-bg-hover-clr: #161d3b,
   alt-bg-clr: #f9f9f9,
+  table-light: #f5f5f5,
 );
 $theme-colors: map-merge($custom-theme-colors, $theme-colors);
 
