--- a/sass/business/_business-tribe.scss
+++ b/sass/business/_business-tribe.scss
@@ -107,6 +107,17 @@
     object-fit: cover;
   }
 }
+.avater_image_48 {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  overflow: hidden;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
 
 .tribe_card_wrapper {
   p {
@@ -126,5 +137,96 @@
     font-weight: 600;
     color: var(--alt-text-clr);
     font-size: 16px;
+  }
+}
+
+// tribe check box
+.tribe_single_check_box {
+  .form_check_input {
+    padding: 0;
+    height: initial;
+    width: initial;
+    margin-bottom: 0;
+    display: none;
+    cursor: pointer;
+  }
+  .form_check_label {
+    h5 {
+      font-size: 16px;
+      font-weight: 600;
+      color: var(--alt-text-clr);
+    }
+    p {
+      font-weight: 400;
+      font-size: 14px;
+      color: #595959;
+    }
+    position: relative;
+    cursor: pointer;
+    &::before {
+      content: "";
+      -webkit-appearance: none;
+      background-color: #ffffff;
+      border: 2px solid #d9d9d9;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
+        inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+      padding: 10px;
+      display: inline-flex;
+      position: relative;
+      vertical-align: middle;
+      cursor: pointer;
+      margin-right: 5px;
+      border-radius: 5px;
+      top: 36px;
+    }
+  }
+  .form_check_input:checked + .form_check_label:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 40px;
+    left: 9px;
+    width: 6px;
+    height: 14px;
+    border: solid #ffffff;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+  }
+  .form_check_input:checked + .form_check_label::before {
+    background-color: #000000;
+    border: 2px solid #000000;
+  }
+  .label_content {
+    position: relative;
+    left: 36px;
+  }
+}
+
+.member_table {
+  th {
+    color: #686869;
+    font-size: 12px;
+    font-weight: 500;
+  }
+  td {
+    vertical-align: middle;
+  }
+  p {
+    color: #091420;
+    font-size: 14px;
+    font-family: var(--alt-text-clr);
+  }
+  a {
+    color: #091420;
+    text-decoration: underline;
+    font-size: 14px;
+    &:hover {
+      color: var(--alt-primary);
+    }
+  }
+  span {
+    i {
+      cursor: pointer;
+    }
   }
 }
