--- a/sass/_steps-page.scss
+++ b/sass/_steps-page.scss
@@ -410,3 +410,24 @@
   top: 1px !important;
   left: 6px !important;
 }
+
+// tribe page css
+.stepper.tribe_stepper {
+  justify-content: center;
+
+  @media (min-width: 320px) {
+    gap: 2rem;
+  }
+  @media (min-width: 450px) {
+    gap: 3rem;
+  }
+  @media (min-width: 576px) {
+    gap: 5rem;
+  }
+  @media (min-width: 768px) {
+    gap: 9rem;
+  }
+  @media (min-width: 1200px) {
+    gap: 5rem;
+  }
+}
