--- a/sass/business/_business-tribe.scss
+++ b/sass/business/_business-tribe.scss
@@ -230,3 +230,96 @@
     }
   }
 }
+
+.tribe_info_note {
+  font-size: 14px;
+  color: #717171;
+  span {
+    font-weight: 500;
+    font-size: 10px;
+    color: #000000;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
+  }
+}
+
+// stepper page (review)
+.tribe_review_section {
+  --color: #232529;
+  --font: var(--bs-body-font-family);
+  --fw: 600;
+  h2 {
+    font-size: 32px;
+    font-weight: var(--fw);
+    font-family: var(--font);
+    color: var(--color);
+    margin-bottom: 32px;
+  }
+  h3 {
+    font-size: 24px;
+    font-weight: var(--fw);
+    font-family: var(--font);
+    color: var(--color);
+    margin-bottom: 12px;
+  }
+  h5 {
+    font-size: 16px;
+    font-family: var(--font);
+    color: var(--color);
+    font-weight: var(--fw);
+  }
+  p {
+    font-size: 16px;
+    font-family: var(--font);
+    color: var(--color);
+    font-weight: 400;
+    margin-bottom: 16px;
+  }
+  div {
+    margin-bottom: 32px;
+  }
+  button {
+    min-width: 482px;
+    display: inline-block;
+    border: 2px dashed #d9d9d9;
+    border-radius: 5px;
+    font-size: 16px;
+    font-family: var(--font);
+    &:hover {
+      border: 2px dashed var(--alt-primary);
+    }
+    @media (max-width: 576px) {
+      min-width: 100%;
+    }
+  }
+}
+
+.addsignature_tab_content {
+  ul {
+    li {
+      button {
+        font-size: 14px;
+        font-family: var(--alt-text-clr);
+        font-weight: 600;
+        color: var(--alt-text-clr);
+        background-color: transparent;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        border-bottom: 2px solid transparent;
+        padding: 0;
+        &.active {
+          border-bottom: 2px solid #000000;
+        }
+        &:hover {
+          color: #000000;
+        }
+      }
+    }
+  }
+}
