save page started

--- a/sass/_landing-page.scss
+++ b/sass/_landing-page.scss
@@ -102,8 +102,7 @@
   }
 }
 
-// hero section
-
+// hero section start here
 .hero_section {
   &.hero_business_section {
     background-image: url("../assets/images/business-landing-page/hero-section/hero-left-bg.svg"),
