--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,4 +1,5 @@
-// Custom.scss
+//
+
 // Option A: Include all of Bootstrap
 $form-check-input-border: 2px solid var(--alt-gray-light);
 $form-check-input-checked-color: var(--alt-black);
@@ -11,7 +12,6 @@ $accordion-button-focus-box-shadow: 0;
 $accordion-button-active-bg: transparent;
 $accordion-button-active-color: var(--alt-dark-light);
 
-// select input form
 $form-select-color: #595959;
 // $form-select-bg: red;
 
