business profile page done

--- a/sass/_badges.scss
+++ b/sass/_badges.scss
@@ -133,3 +133,12 @@
     transform: translateY(-50%);
   }
 }
+
+// super star badge
+
+.ratting {
+  position: relative;
+  background-color: var(--alt-navy-blue);
+  color: #ffffff;
+  font-size: 12px;
+}
