--- a/sass/bisuness.dashboard.scss
+++ b/sass/bisuness.dashboard.scss
@@ -4,12 +4,14 @@
 $custom-theme-colors: (
   alt-primary: #ffd600,
   // dashboard colors for business
+  alt-text-gold: #eda211,
   alt-text-clr: #232529,
   alt-border-clt: #f0f0f0,
   alt-gray-bg-clr: #f4f4f4,
   alt-bg-hover-clr: #161d3b,
   alt-bg-clr: #f9f9f9,
   table-light: #f5f5f5,
+  alt-text-gray-clr: #595959,
 );
 $theme-colors: map-merge($custom-theme-colors, $theme-colors);
 
@@ -46,6 +48,8 @@ $grid-breakpoints: map-merge($grid-breakpoints, $custom-grid-breakpoints);
 @import "business/event_details";
 @import "business/business-tribe";
 @import "business/business-saved";
+@import "business/freelancer-profile";
+@import "business/business-profile";
 @import "search-page";
 @import "buttons";
 @import "badges";
