--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -77,6 +77,7 @@ $grid-breakpoints: map-merge($grid-breakpoints, $custom-grid-breakpoints);
   --alt-gray: #f4f4f4;
   --alt-gray-50: #626366;
   --alt-gold: #eda211;
+  --alt-text-clr: #232529;
 
   // theme dark primary
   --alt-dark-theme-primary: #15171f;
@@ -116,4 +117,5 @@ h6 {
 @import "about-us-page";
 @import "search-page";
 @import "business/business-tribe";
+@import "business/start-agreement";
 // @import "freelance-landing-page";
