project initial page init

--- a/sass/_badges.scss
+++ b/sass/_badges.scss
@@ -55,6 +55,9 @@
 .alt-dots-danger {
   background-color: #e01e5a !important;
 }
+.alt-dots-green {
+  background-color: #31946a !important;
+}
 
 // Rectangle shape padge
 
