business details apge updated

--- a/sass/business/_business-project-initial.scss
+++ b/sass/business/_business-project-initial.scss
@@ -22,3 +22,12 @@
     color: var(--alt-text-clr);
   }
 }
+
+.tab_wrapper_section{
+  ul{
+    margin: 0;
+    padding: 0 !important;
+    list-style-type: none !important;
+    
+  }
+}
