--- a/sass/business/_business-project-initial.scss
+++ b/sass/business/_business-project-initial.scss
@@ -31,3 +31,51 @@
     
   }
 }
+.agreement_card{
+  .name{
+    h2{
+      font-size: 14px !important;
+      color: #fff;
+      opacity: 0.7;
+    }
+    p{
+      color: #fff;
+      font-size: 12px !important;
+      opacity: 0.7;
+    }
+  }
+}
+.tribe_card_wrapper{
+  h4{
+    font-size: 12px;
+    text-transform: uppercase;
+    color: #5C5E63;
+  }
+  h5{
+    font-size: 16px;
+    color: var(--alt-text-clr);
+    font-weight: 600;
+  }
+  .accordion{
+    .accordion-item{
+      border-bottom: none !important;
+      margin-bottom: 15px;
+      .accordion-header{
+        border-bottom: none !important;
+      }
+      
+    }
+    .accordion-button{
+    
+      border-bottom: 0 !important;
+      
+      &:focus{
+        box-shadow: none !important;
+      }
+      &:not(.collapsed){
+        background-color: transparent !important;
+      }
+
+    }
+  }
+}
