my project screen all done

--- a/sass/_badges.scss
+++ b/sass/_badges.scss
@@ -52,6 +52,9 @@
 .alt-dots-gray {
   background-color: #ecedf0 !important;
 }
+.alt-dots-blue {
+  background-color: #423ba3;
+}
 .alt-dots-danger {
   background-color: #e01e5a !important;
 }
