--- a/sass/bisuness.dashboard.scss
+++ b/sass/bisuness.dashboard.scss
@@ -52,6 +52,7 @@ $grid-breakpoints: map-merge($grid-breakpoints, $custom-grid-breakpoints);
 @import "business/freelancer-profile";
 @import "business/business-profile";
 @import "business/business-project-initial";
+@import "business/my-project";
 @import "search-page";
 @import "buttons";
 @import "badges";
