community page done

--- a/sass/bisuness.dashboard.scss
+++ b/sass/bisuness.dashboard.scss
@@ -54,6 +54,7 @@ $grid-breakpoints: map-merge($grid-breakpoints, $custom-grid-breakpoints);
 @import "business/business-project-initial";
 @import "business/my-project";
 @import "business/explore-freelancer";
+@import "business/business-community";
 @import "search-page";
 @import "buttons";
 @import "badges";
