--- a/sass/business/_business-project-initial.scss
+++ b/sass/business/_business-project-initial.scss
@@ -3,7 +3,7 @@
 }
 
 .card_bg {
-  background-color: red;
+  background-color: #5c5e63;
   background-image: url("../../assets/images/business-project/card-corner-bg.svg");
   background-position: top right;
   background-repeat: no-repeat;
