--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -14,11 +14,37 @@
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
 }
+.btn-alt-outline-dark {
+  background-color: #353C59;
+  color: var(--alt-dark-light);
+  border: 0.063rem solid #353C59;
+  border-radius: 0.375rem;
+  padding: 0.5rem 1rem;
+  font-family: var(--bs-body-font-family);
+  font-size: 0.875rem;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 1.3;
+  letter-spacing: normal;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
 
 .btn-alt-outline:hover {
   background-color: var(--alt-primary);
   color: var(--alt-black);
 }
+
+.btn-alt-outline-dark:hover {
+  border: 0.063rem solid #353C59;
+  background-color: #353C59;
+  color: #fff;
+}
+
+
+
 
 // radio buttons
 .alt-input-check-btn-secondary {
