link active added

--- a/sass/business/_dashboard-home.scss
+++ b/sass/business/_dashboard-home.scss
@@ -242,6 +242,11 @@
 .alt_bdb_sidebar {
   ul {
     li {
+      &.active{
+        .alt_dbd_menu_icon {
+          background-color: var(--alt-primary) !important;
+        }
+      }
       a {
         .alt_dbd_menu_icon {
           width: 32px;
@@ -562,8 +567,7 @@
       color: var(--alt-text-dark);
       line-height: 22.4px;
     }
-    button {
-    }
+   
     .rising_start {
       button {
         background-color: #161d3b;
@@ -575,12 +579,7 @@
       .star {
         color: var(--alt-gold);
       }
-      .number {
-      }
-      .number {
-      }
-      .review {
-      }
+      
     }
   }
 
