--- a/sass/business/_freelancer-profile.scss
+++ b/sass/business/_freelancer-profile.scss
@@ -52,3 +52,40 @@
     color: #5c5e63 !important;
   }
 }
+.add_work_wrapper{
+  border: 1px dashed #DFDFDF;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  padding: 4px;
+}
+.add_work_btn{
+  width: 100%;
+  height: 100%;
+  background-color: #DFDFDF;
+  border-radius: 10px;
+  font-weight: 600;
+  color: #232529;
+}
+.qualification_eidt_btn{
+  background-color: transparent;
+  border: 0;
+
+  font-size: 14px;
+  color: #686869;
+  font-weight: 600;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:focus{
+    box-shadow: none;
+  }
+  &:hover{
+    background-color: var(--alt-primary);
+      color: var(--alt-dark-light);
+  }
+}
