start journy page done and check responsiveness

--- a/sass/bisuness.dashboard.scss
+++ b/sass/bisuness.dashboard.scss
@@ -67,6 +67,7 @@ $grid-breakpoints: map-merge($grid-breakpoints, $custom-grid-breakpoints);
 @import "contest-details-page";
 @import "timeline";
 @import "chat-box";
+@import "start-journy-page";
 
 
 // custom design for the freelance pages.
