--- a/sass/_landing-page.scss
+++ b/sass/_landing-page.scss
@@ -214,7 +214,19 @@
     }
   }
 }
-
+.light_theme{
+  .company_logo_section{
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+}
+.dark_theme{
+  .company_logo_section{
+    background-color: rgba(21,23,31,1);
+    @media (min-width: 1200px) {
+      background-color: rgba(21,23,31,0.7);
+    }
+  }
+}
 // section grid
 
 .section_grid {
