--- a/sass/business/_dashboard-home.scss
+++ b/sass/business/_dashboard-home.scss
@@ -1,3 +1,11 @@
+@media (min-width: 1400px) {
+  .container-custom {
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+
 .alt_bdb_header {
   height: 72px;
   display: flex;
@@ -461,6 +469,7 @@
     font-family: var(--bs-body-font-family);
     font-weight: 500;
     font-size: 12px;
+    padding: 4px 10px;
   }
   a {
     font-size: 14px;
@@ -569,41 +578,51 @@
       width: 35px;
       height: 35px;
       position: absolute;
-      top: 24px;
-      right: 24px;
+      top: 10px;
+      right: 10px;
       line-height: 23px;
       background-color: #f3f3f3;
       text-align: center;
     }
     .talent_img {
-      width: 74px;
-      height: 90px;
+      width: 60px;
+      height: 60px;
       line-height: 74px;
       border-radius: 50%;
       margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       img {
         width: 100%;
         height: 100%;
+        flex-shrink: 1;
       }
     }
     h3 {
       font-family: var(--bs-body-font-family);
-      font-size: 20px;
-      font-weight: 600;
-      color: var(--alt-text-dark);
+      font-size: 16px;
+      font-weight: 700;
+      color: #232529;
       line-height: 24px;
     }
     h4 {
       font-family: var(--bs-body-font-family);
-      font-size: 16px;
+      font-size: 14px;
       font-weight: 400;
-      color: var(--alt-text-dark);
+      color: #5C5E63;
       line-height: 22.4px;
     }
    
     .rising_start {
       button {
         background-color: #161d3b;
+        font-size: 12px !important;
+        font-weight: 600;
+        padding: 4px 8px;
+        span{
+          left: -4px;
+        }
       }
     }
     .review {
