--- a/sass/business/_dashboard-home.scss
+++ b/sass/business/_dashboard-home.scss
@@ -7,7 +7,12 @@
     margin: 0 auto;
   }
 }
-
+.middle_column{
+  @media (min-width: 1200px) {
+    padding-left: 28px;
+    padding-right: 36px;
+  }
+}
 .alt_bdb_header {
   height: 72px;
   display: flex;
